--- a/tasks/uwsgi.yml
+++ b/tasks/uwsgi.yml
@@ -8,11 +8,10 @@
   become: yes
 
 - name: install uwsgi emperor
-  apt: name={{item}}
+  apt:
+    pkg: ['uwsgi-emperor', 'uwsgi-plugin-python']
+    state: present
   become: yes
-  with_items:
-    - uwsgi-emperor
-    - uwsgi-plugin-python
 
 - name: write default vassals configuration file
   template: src=vassals-default.skel.j2 dest=/etc/uwsgi-emperor/vassals/vassals-default.skel
