--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -4,7 +4,7 @@
 # app_name should be a shorthand, lowercase, no spaces version of the
 # application name. Assumed to be the project folder name and app name.
 # such as: {{ app_name }}/{{ app_name }}/settings.py
-app_name: my_geonode
+app_name: test_project
 
 # geonode_version should be the geonode version to install
 # if not provided in the requirements file (currently dropped in master)
@@ -13,7 +13,7 @@ geonode_version: 2.10rc4
 # github user who owns the repository
 # if "geonode" is provided as a github user, this ansible role will create
 # a geonode project template from scratch (demo mode)
-github_user: GeoNode
+github_user: Hydrata
 
 # git repository name
 # defaults to the application name, but should be overriden if diffent
@@ -26,7 +26,7 @@ code_repository: "https://github.com/{{ github_user }}/{{ repo_name }}.git"
 branch_name: master
 
 # Server name for nginx.
-server_name: 54.157.187.117
+server_name: hydrata-dev
 
 db_data_instance: "{{ app_name }}"
 db_metadata_instance: "{{ app_name }}_app"
